--- a/package.json
+++ b/package.json
@@ -26,7 +26,13 @@
   "bin": {
     "ugen": "./bin/ugen"
   },
+  "config": {
+    "ghooks": {
+      "pre-push": "npm run coverage && npm run codeclimate-coverage-push"
+    }
+  },
   "scripts": {
+    "codeclimate-coverage-push": "CODECLIMATE_REPO_TOKEN=75937a8e785a7a8a5ae77406ab86398c3bb39ba558988fc38f64ae478478deb4 ./node_modules/.bin/codeclimate-test-reporter < ./coverage/lcov.info",
     "coverage-report": "open coverage/lcov-report/index.html",
     "coverage": "istanbul cover _mocha './tests/**/*.test.js' --include-all-sources true",
     "test": "./node_modules/.bin/mocha './tests/**/*.test.js' --full-trace --recursive"
@@ -49,6 +55,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "codeclimate-test-reporter": "^0.3.1",
+    "ghooks": "^1.2.1",
     "istanbul": "^0.4.3",
     "mocha": "^2.4.5",
     "mocha-lcov-reporter": "^1.2.0"
