--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
   "scripts": {
     "codeclimate-coverage-push": "CODECLIMATE_REPO_TOKEN=75937a8e785a7a8a5ae77406ab86398c3bb39ba558988fc38f64ae478478deb4 ./node_modules/.bin/codeclimate-test-reporter < ./coverage/lcov.info",
     "coverage-report": "open coverage/lcov-report/index.html",
-    "coverage": "istanbul cover _mocha './tests/**/*.test.js' --include-all-sources true",
+    "coverage": "istanbul cover _mocha './tests/**/*.test.js' --include-all-sources true --verbose",
     "test": "./node_modules/.bin/mocha './tests/**/*.test.js' --full-trace --recursive"
   },
   "engines": {
