--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   "devDependencies": {
     "chai": "^3.5.0",
     "codeclimate-test-reporter": "^0.3.1",
+    "fs-extra": "^0.26.7",
     "ghooks": "^1.2.1",
     "istanbul": "^0.4.3",
     "mocha": "^2.4.5",
